# resume

./: .gitignore  Cargo.toml  Dockerfile  README.md  go.mod  go.sum  main.go  resume.tex
.github/workflows/: convert-pdf.yml  convert.yml
2-page/: resume.tex
Frontend/: resume.tex
Microsoft/: resume.tex
src/: main.rs
