[package]
name = "resume"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }
pdfium-render = "0.8"
image = "0.25"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
